Generate div elements for containers. See #194. The containers have the classes 'container' and the one defined as last parameter in the 'addCanvas()' call (see request.js).

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -31,6 +31,12 @@ body {
   }
 }
 
+/* containers */
+div.container {
+  position: absolute;
+  display: none;
+}
+
 /* nodes and legend items */
 div.node, div.legend {
   background: #eee;
