--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -126,6 +126,7 @@ div.node, div.legend {
   right: 0;
   width: 200px;
   z-index: 10;
+  display: none;
 
   /* the bow with the legend and the admin panel*/
   #panels {
