Display help text on location selection dialog

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -340,6 +340,10 @@ input[type=button] {
   height: 100%;
   width: 100%;
 
+  h3 {
+    margin-left: 5px;
+  }
+
   #map{
     float:left;
     display:inline;
