--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -43,14 +43,6 @@ body, html{
   }
 }
 
-@mixin rotated {
-  -moz-transform: rotate(-90deg);
-  -webkit-transform: rotate(-90deg);
-  -o-transform: rotate(-90deg);
-  transform: rotate(-90deg);
-  filter: progid:DXImageTransform.Microsoft.BasicImage(rotation='3');
-}
-
 /* containers */
 div.container {
   position: absolute;
@@ -138,7 +130,8 @@ div.node, div.legend {
     /* the admin panel */
     #admin {
       margin: 10px;
-      border: 1px dashed #c5c5c5;
+      margin-left: 0;
+      border: 1px solid #c5c5c5;
       @include border-radius(7px);
       font-size: 0.8em;
       padding: 0 10px 0 10px;
@@ -165,7 +158,8 @@ div.node, div.legend {
     /* the legend */
     #legend {
       margin: 10px;
-      border: 1px dashed #c5c5c5;
+      margin-left: 0;
+      border: 1px solid #c5c5c5;
       @include border-radius(7px);
       padding: 0 10px 0 10px;
       position: relative;
@@ -184,23 +178,28 @@ div.node, div.legend {
 #hide-panels{
   display: inline-table;
   position: absolute;
-  top: 130px;
-  right: -69px;
+  top: 80px;
+  right: 0px;
   background: #f5f5f5;
-  width: 167px;
+  width: 30px;
   height: 30px;
   z-index: 8;
   text-align: center;
   @include border-radius(5px);
-  border: 1px #ccc dashed;
+  -webkit-border-top-right-radius: 0px;
+  -webkit-border-bottom-right-radius: 0px;
+  -moz-border-radius-topright: 0px;
+  -moz-border-radius-bottomright: 0px;
+  border-top-right-radius: 0px;
+  border-bottom-right-radius: 0px;
+  border: 1px #ccc solid;
   vertical-align: middle;
-  border-bottom: none;
-  @include rotated;
+  border-right: none;
 }
 
 .title{
   background: #eee;
-  border-bottom: 1px dashed #c5c5c5;
+  border-bottom: 1px solid #c5c5c5;
   @include border-radius(7px);
   margin: 0 -10px 0 -10px;
   margin-bottom: 0;
