--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -23,7 +23,7 @@
                 </select>
             </div>
         </div>
-        <div id="hide-panels" class="clickable"></div>
+        <div id="hide-panels" class="clickable"><h3>?</h3></div>
         <div id="panels-container">
             <div id="panels">
               <div id="legend">
