--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -26,11 +26,15 @@
         <div id="hide-panels" class="clickable"><h3>?</h3></div>
         <div id="panels-container">
             <div id="panels">
-              <div id="legend">
+              <div id="legend" class="panel">
                 <div id="legend-title" class="title clickable"></div>
                 <div id="legend-text"></div>
               </div>
-              <div id="admin">
+              <div id="info" class="panel">
+                <div id="info-title" class="title clickable"></div>
+                <div id="info-text"></div>
+              </div>
+              <div id="admin" class="panel">
                 <div id="admin-title" class="title clickable"><p>Admin panel</p></div>
                 <div id="admin-text"></div>
               </div>
