Mode change sd/ad

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,6 +14,12 @@
                 <p class="location"></p>
               </div>
             </div>
+            <div class="mode-arrow">
+              <select name="mode" id="mode" size="1">
+                <option value="sd">Standard</option>
+                <option value="ad">Advanced</option>
+              </select>
+            </div>
             <div class="hide-arrow">
                 <select name="lang" id="lang" size="1">
                     <option value="de">Deutsch</option>
