--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -251,6 +251,26 @@ input[type=button] {
     }
   }
 
+ .mode-arrow {
+   border: 1px solid #cccccc;
+   display: inline;
+   position: absolute;
+   width: 100px;
+   padding-top: 3px;
+   overflow: hidden;
+   border-radius: 7px;
+   float: right;
+   background: url(arrow.png) no-repeat right white;
+   height: 29px !important;
+   right: 135px;
+   top: 10px;
+
+   &.svg {
+     background: url(arrow.svg) no-repeat right white !important;
+     background-size: 30px 15px !important;
+   }
+  }
+
   #location-container{
     margin: 19px auto 0 auto;
     max-width: 550px;
@@ -273,6 +293,17 @@ input[type=button] {
   }
 
   #lang {
+    background: transparent;
+    width: 125px;
+    line-height: 1;
+    border: 0;
+    border-radius: 0;
+    padding: 3px 5px 3px 15px;
+    height: 25px;
+    -webkit-appearance: none;
+  }
+
+  #mode {
     background: transparent;
     width: 125px;
     line-height: 1;
