--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
             <input id="code-name" type="text" placeholder="ICD Code">
             <p id="search-button" class="icon-search icon-large clickable"></p>
             <div id="location-container">
-              <div id="location-inner">
+              <div id="location-inner" class="clickable">
                 <p class="location"></p>
               </div>
             </div>
